# oidc-verifier-rs

./: .gitignore  Cargo.toml  README.md
examples/: example.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: certs.rs  lib.rs
