[package]
name = "simple"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oidc-verifier-rs = { path="../.."  }
log = "0.4.14"
env_logger = "0.9.0"
tokio = "1.9.0"
